--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "gulp": "^4.0.2",
     "http-errors": "~1.6.3",
     "kind-of": "^6.0.3",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
     "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^4.0.2",
+    "standard": "^14.3.3"
   }
 }
